added fixes from Neil